# DoraDataCollection

./: .env  .env-example  .gitignore  Cargo.toml  README.md
arm/: Cargo.toml
arm/src/: arm_state.rs  main.rs
daemon/: Cargo.toml
daemon/public/assets/: 403.c0a31e20.js  500.b6353432.js  Account.0c14f3c8.js  Banner.480dded4.js  BasicForm.725164e3.js  BasicUpload.f68fd361.js  EmailSetting.d4a76ec2.js  FluxTrend.c4cd71c1.js  Help.4c2ac882.js  Menu.a67aa556.js  News.1007a6e9.css  Notice.2c213569.js  PlusOutlined.71de4daf.js  RadioButton.222114b3.js  RevealSetting.b4e2abcf.js  SafetySetting.783190dc.js  Step1.79b229dc.js  Step2.408d2007.js  Step3.be8cd3ec.js  TableAction.ff835f83.css  Type.626f449d.js  basic.1b4aa3aa.js  docs.14219fec.js  editCell.f2c95cf4.js  fail.6682521d.css  fail.b3a1a52b.js  index.00e508df.js  index.1640a5ff.css  index.199bb13f.js  index.1e8fb6be.js  index.3790d147.js  index.4fef6569.js  index.59ad9efd.js  index.9a626048.js  index.b9e33f7d.js  index.cc069dba.js  index.d53e90da.js  index.d7ab5426.js  info.8651f7ee.css  info.ef30bdb5.js  (+15 more)
daemon/src/: asset.rs  db.rs  error.rs  http.rs  keyboard.rs  main.rs  tcp.rs
daemon/src/api/: login.rs  mod.rs  task.rs
daemon/src/model/: episode.rs  mod.rs  robot.rs  task.rs
hydragate/: Cargo.toml
hydragate/public/: app.config.js  index.html
hydragate/public/assets/: 403.659f7c73.js  403.b9b143e4.js  403.d125a5b8.js  404.341d324f.js  404.7c7ecb51.js  404.94d8595f.js  404.dcf3e355.js  500.553b6faf.js  500.a28e43b2.js  500.e704c4a4.js  Account.27d379fd.js  Account.321ee316.js  Account.9decae74.js  ArchiveOutline.00caecc2.js  ArchiveOutline.1395acd9.js  ArchiveOutline.24497a89.js  ArchiveOutline.dc775cc7.js  Banner.50c5e902.js  Banner.66c812c1.js  Banner.ceeece53.js  BasicForm.909af05f.js  (+280 more)
hydragate/src/: db.rs  error.rs  http.rs  keyboard.rs  main.rs  tcp.rs  util.rs
(+87 files in other folders)
