[package]
name = "arm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
