[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = "0.8.1"
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }
device_query = "3.0.0"
