[package]
name = "hydragate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = "0.8.1"
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }
device_query = "3.0.0"
rust-embed = "8.6.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
mime_guess = "2.0.5"
thiserror = "2.0.12"
bcrypt = "0.17.0"
futures = "0.3.31"
